# AI-BoardGames

./: CMakeLists.txt
include/AIs/: AI.h
include/AIs/TTT_AI/: TTT_AI.cpp  TTT_AI.h
include/Board/: Board.cpp  Board.h
include/Games/TicTacToe/: TicTacToe.cpp  TicTacToe.h
include/Move/: Move.cpp  Move.h
src/: main.cpp
test/: BoardTest.h  TicTacToeTest.h
